--- a/src/components/firstScreen/main.module.css
+++ b/src/components/firstScreen/main.module.css
@@ -42,3 +42,30 @@ background-clip: text;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
+@media screen and (max-width: 1340px) {
+    .mainText {
+        font-size: 40px; 
+        line-height: 40px; /* 100% */
+    } 
+}
+@media screen and (max-width: 860px) {
+    .imgFinger {
+max-width: 200px;
+    } 
+    .mainText {
+        font-size: 30px; 
+        line-height: 32px; /* 100% */
+    } 
+}
+@media screen and (max-width: 580px) {
+    .imgFinger {
+max-width: 160px;
+margin-right: 16px;
+    } 
+    .mainText {
+        font-size: 20px; 
+        line-height: 32px; /* 100% */
+    } 
+}
+
+
