--- a/src/components/plan/plan.module.css
+++ b/src/components/plan/plan.module.css
@@ -201,7 +201,7 @@ box-sizing: border-box;
         justify-content: flex-start;
         position: absolute;
         left: -12px;
-        top: 350px;
+        top: 364px;
         white-space: nowrap;
         width: auto;
     }
@@ -218,4 +218,40 @@ box-sizing: border-box;
         font-size: 18px;
         line-height: 20px;
     }
+}
+
+@media screen and (max-width: 480px) {
+    .main_text {
+        font-size: 24px;
+        line-height: 26px;
+        margin-top: 30px;
+    }
+    .h3_plan {
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .wrapContainer {
+        padding: 20px;
+    }
+}
+.sect {
+    padding: 0 10px 10px 10px;
+}
+
+@media screen and (max-width: 340px) {
+    .main_text {
+        font-size: 20px;
+        line-height: 22px;
+        margin-top: 20px;
+    }
+    .h3_plan {
+        font-size: 10px;
+        line-height: 12px;
+    }
+    .wrapContainer {
+        padding: 16px;
+    }
+.sect {
+    padding: 0 10px 10px 10px;
+}
 }
