--- a/src/components/works/work.module.css
+++ b/src/components/works/work.module.css
@@ -22,3 +22,243 @@
     width: 1000px;
     height: 400px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.card {
+    overflow: visible;
+    width: 800px;
+    height: 400px;
+    position: relative;
+  }
+  
+  .content {
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms;
+    box-shadow: 0px 0px 10px 1px #000000ee;
+    border-radius: 5px;
+  }
+  
+  .front, .back {
+    background-color: #151515;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  .back {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  .back::before {
+    position: absolute;
+    content: ' ';
+    display: block;
+    width: 160px;
+    height: 230%;
+    background: linear-gradient(90deg, transparent, #ff9966, #ff9966, #ff9966, #ff9966, transparent);
+    animation: rotation_481 5000ms infinite linear;
+  }
+  
+  .back_content {
+    position: absolute;
+    width: 99%;
+    height: 99%;
+background-image: url('../../img/image9999.png');
+background-position: center;
+background-size: cover;
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .back_content_icecream {
+    position: absolute;
+    width: 99%;
+    height: 99%;
+background-position: center;
+background-image: url('../../img/ice-cream.png');
+background-size: cover;
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .back_content_film {
+    position: absolute;
+    width: 99%;
+    height: 99%;
+    background-image: url('../../img/imagerrrr.png');
+background-position: center;
+background-size: cover;
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+      }
+  
+  .card:hover .content {
+    transform: rotateY(180deg);
+  }
+  
+  @keyframes rotation_481 {
+    0% {
+      transform: rotateZ(0deg);
+    }
+  
+    0% {
+      transform: rotateZ(360deg);
+    }
+  }
+  
+  .front {
+    transform: rotateY(180deg);
+    color: white;
+  }
+  
+  .front .front_content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .front_content .badge {
+    background-color: #00000055;
+    padding: 2px 10px;
+    border-radius: 10px;
+    backdrop-filter: blur(2px);
+    width: fit-content;
+  }
+  
+  .description {
+    box-shadow: 0px 0px 10px 5px #00000088;
+    width: 100%;
+    padding: 10px;
+    background-color: #00000099;
+    backdrop-filter: blur(5px);
+    border-radius: 5px;
+  }
+  
+  .title {
+    font-size: 49px;
+    max-width: 100%;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .title p {
+    width: 50%;
+  }
+  
+  .card_footer {
+    color: #ffffff88;
+    margin-top: 5px;
+    font-size: 12px;
+  }
+  
+  .front .img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+  
+  
+  .bottom_circle {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    filter: blur(15px);
+    animation: floating 2600ms infinite linear;
+    position: absolute;
+    background-color: #ff8866;
+    left: 50px;
+    top: 0px;
+    width: 150px;
+    height: 150px;
+    animation-delay: -800ms;
+  }
+  
+  .right_circle {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    filter: blur(15px);
+    animation: floating 2600ms infinite linear;
+    position: absolute;
+    background-color: #ff2233;
+    right: 40px;
+    top: 40px;
+    width: 50px;
+    height: 50px;
+    animation-delay: -1800ms;
+  }
+  .left_circle {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    filter: blur(15px);
+    animation: floating 2600ms infinite linear;
+    position: absolute;
+    background-color: yellow;
+    right: 100px;
+    top: 120px;
+    width: 80px;
+    height: 80px;
+    animation-delay: -1800ms;
+  }
+  
+  @keyframes floating {
+    0% {
+      transform: translateY(0px);
+    }
+  
+    50% {
+      transform: translateY(10px);
+    }
+  
+    100% {
+      transform: translateY(0px);
+    }
+  }
