--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -38,6 +38,28 @@ ul {
     align-items: center;
     justify-content: center;
 }
+.link {
+    text-decoration:none;
+    font-family: Manrope;
+    font-size: 20px;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.link:hover {
+   color: fuchsia;
+}
+.img_link {
+    width: 40px;
+}
+.li_social {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
 .wrap_company {
     display: flex;
     padding: 10px;
@@ -68,6 +90,16 @@ line-height: 28px; /* 140% */
 @media screen and (max-width: 480px) {
 ul {
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.link {
+    text-decoration:none;
+    font-family: Manrope;
+    font-size: 12px;
+    font-weight: 600;
     display: flex;
     flex-direction: column;
     align-items: center;
